crates/cli/tests/snapshots/snapshots/test_cli_commands_snapshots__help_output.snap
---
source: tests/snapshots/test_cli_commands_snapshots.rs
assertion_line: 35
expression: normalized
---
newton
Newton Loop optimization framework in Rust

USAGE:
    newton <COMMAND>

OPTIONS:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
WORKFLOW COMMANDS:
  run       Execute a full optimization loop
  init      Initialize a Newton workspace with the default template
  batch     Process queued work items for a project
  step      Advance loop by one cycle
  status    Inspect progress of an execution
  report    Summarize learnings from an execution
  error     Diagnose failures during optimization
  workflow  Operate workflow graphs via deterministic runner
  help      Print this message or the help of the given subcommand(s)
