crates/cli/tests/snapshots/snapshots/test_cli_commands_snapshots__status_command_execution.snap
---
source: tests/snapshots/test_cli_commands_snapshots.rs
expression: stdout
---
Execution ID: test-exec-123
Path: .
Status: Unknown (execution tracking not yet implemented)
